--- a/api/external/api-cert.yaml
+++ b/api/external/api-cert.yaml
@@ -7,15 +7,17 @@ info:
 host: localhost
 basePath: /
 tags:
-  - name: component-plat-api
-    description: component-plat-api
   - name: component-rest-api
     description: component-rest-api
 paths:
   /v1/certs/components:
     get:
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'N'
+      x-sysadmin-role: 'Y'
       x-impact-subsystem: 影响
-      x-access-port: 30081
+      x-access-port: 25081
       x-auth-required: 'Y'
       x-public-api: 'Y'
       tags:
@@ -48,6 +50,14 @@ paths:
         - Authorization:
             - global
     post:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - component-rest-api
       summary: 注册外部组件
@@ -73,14 +83,12 @@ paths:
           required: true
           type: string
           pattern: '[_a-zA-Z][_a-zA-Z0-9 -]{3,31}'
-          allowEmptyValue: false
         - name: type
           in: query
           description: '组件类型。【取值范围】0：内部组件 1：vmware 2：email 3：对象存储 4：A8000 5:其他 6:外部存储'
           required: true
           type: integer
           format: int32
-          allowEmptyValue: false
       responses:
         '200':
           description: OK
@@ -95,9 +103,16 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
   '/v1/certs/components/{componentId}':
     put:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - component-rest-api
       summary: 修改组件证书配置
@@ -138,8 +153,15 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
     delete:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - component-rest-api
       summary: 删除组件
@@ -169,9 +191,16 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
   '/v1/certs/components/{componentId}/action/import':
     post:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - component-rest-api
       summary: 导入证书
@@ -251,9 +280,16 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
   '/v1/certs/components/{componentId}/ca/action/download':
     get:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - component-rest-api
       summary: 下载CA证书
@@ -283,9 +319,16 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
   '/v1/certs/components/{componentId}/crls':
     get:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - component-rest-api
       summary: 查询证书吊销列表
@@ -320,9 +363,16 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
   '/v1/certs/components/{componentId}/crls/action/import':
     post:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - component-rest-api
       summary: 导入证书吊销列表
@@ -361,9 +411,16 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
   '/v1/certs/components/{componentId}/crls/{crlId}':
     delete:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - component-rest-api
       summary: 删除证书吊销列表
@@ -398,9 +455,16 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
   '/v1/certs/components/{componentId}/request-file/action/export':
     get:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - component-rest-api
       summary: 导出证书请求文件
@@ -419,7 +483,6 @@ paths:
           required: true
           type: string
           pattern: rsa-2048|rsa-4096
-          allowEmptyValue: false
         - name: componentId
           in: path
           description: 组件ID
@@ -437,74 +500,10 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
-  /v1/pm/cert/components:
-    post:
-      tags:
-        - component-plat-api
-      summary: 注册组件
-      operationId: registerComponentUsingPOST
-      consumes:
-        - application/json
-      produces:
-        - '*/*'
-      parameters:
-        - in: body
-          name: component
-          description: 证书组件
-          required: false
-          schema:
-            $ref: '#/definitions/ComponentDetail«CertificateDetail»'
-            originalRef: ComponentDetail«CertificateDetail»
-      responses:
-        '200':
-          description: OK
-        '201':
-          description: Created
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-      security:
-        - Authorization:
-            - global
-      deprecated: false
-    put:
-      tags:
-        - component-plat-api
-      summary: 通知证书更新状态
-      operationId: notifyUpdateStatusUsingPUT
-      consumes:
-        - application/json
-      produces:
-        - '*/*'
-      parameters:
-        - in: body
-          name: certUpdateStatus
-          description: 证书更新状态
-          required: false
-          schema:
-            $ref: '#/definitions/CertUpdateStatus'
-            originalRef: CertUpdateStatus
-      responses:
-        '200':
-          description: OK
-        '201':
-          description: Created
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-      security:
-        - Authorization:
-            - global
-      deprecated: false
   /v1/certs/components/action/consistency-check:
     get:
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 25081
       x-auth-required: 'Y'
