--- a/api/external/api-resource-access.yaml
+++ b/api/external/api-resource-access.yaml
@@ -15,6 +15,9 @@ produces:
 paths:
   '/v2/environments/{envId}/resources':
     get:
+      x-impact-subsystem: 不影响
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
       x-dp-admin-role: 'Y'
       x-sysadmin-role: 'Y'
       tags:
@@ -65,6 +68,8 @@ paths:
             $ref: '#/definitions/EnvironmentResourceList'
   /v2/resources:
     post:
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
       x-request-examples-url-1: 'POST  https://host:25081/v2/resources'
       x-request-examples-description-1: 注册NAS SHARE
       x-request-examples-text-1: >-
@@ -129,6 +134,11 @@ paths:
           schema:
             $ref: '#/definitions/UuidObject'
     get:
+      x-impact-subsystem: 不影响
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-sysadmin-role: 'Y'
       x-access-port: 25081
       x-auth-required: 'Y'
       x-public-api: 'Y'
@@ -185,38 +195,12 @@ paths:
             $ref: '#/definitions/ProtectedResourcePageListResponse'
   /v2/environments:
     post:
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
       x-impact-subsystem: 不影响
-      x-request-examples-url-2: 'POST https://host:25801/v2/environments'
-      x-request-examples-description-2: 注册HDFS集群
-      x-request-examples-text-2: |-
-        {
-          "name": "HDFS_Cluster",
-          "type": "BigData",
-          "endpoint": "192.168.0.1",
-          "subType": "HDFS",
-          "port": 8888,
-          "extendInfo": {
-            "loginMode": "string",//环境的鉴权方式，取值：loginWithPassword|loginWithNoAuth|loginWithKerberos
-            "kerberosId": "string",//环境鉴权使用的kerberosid
-            "accessType": "string",//环境访问方式（ip或域名），取值：ip|domain
-            "clusterType": "string"// 环境集群类型，取值：MRS|CDH|FusionInsight
-          }
-        }
-      x-request-examples-2: |-
-        {
-          "name": "HDFS_Cluster",
-          "type": "BigData",
-          "endpoint": "192.168.0.1",
-          "subType": "HDFS",
-          "port": 8888,
-          "extendInfo": {
-            "loginMode": "string",//环境的鉴权方式，取值：loginWithPassword|loginWithNoAuth|loginWithKerberos
-            "kerberosId": "string",//环境鉴权使用的kerberosid
-            "accessType": "string",//环境访问方式（ip或域名），取值：ip|domain
-            "clusterType": "string"// 环境集群类型，取值：MRS|CDH|FusionInsight
-          }
-        }
-      x-request-examples-text-1: >-
+      x-request-examples-url-2: 'POST https://host:25080/v2/environments'
+      x-request-examples-description-2: 注册Nas设备
+      x-request-examples-text-2: >-
         {
 
         "name":"DoradoV6_001",
@@ -241,7 +225,7 @@ paths:
         "snapConsistency":"0" // 是否开启快照一致性：0-不打开，1-打开
 
         }}
-      x-request-examples-1: >-
+      x-request-examples-2: >-
         {
 
         "name":"DoradoV6_001",
@@ -266,8 +250,36 @@ paths:
         "snapConsistency":"0" // 是否开启快照一致性：0-不打开，1-打开
 
         }}
-      x-request-examples-url-1: 'POST https://host:25080/v2/environments'
-      x-request-examples-description-1: 注册Nas设备
+      x-request-examples-text-1: |-
+        {
+          "name": "HDFS_Cluster",
+          "type": "BigData",
+          "endpoint": "192.168.0.1",
+          "subType": "HDFS",
+          "port": 8888,
+          "extendInfo": {
+            "loginMode": "string",//环境的鉴权方式，取值：loginWithPassword|loginWithNoAuth|loginWithKerberos
+            "kerberosId": "string",//环境鉴权使用的kerberosid
+            "accessType": "string",//环境访问方式（ip或域名），取值：ip|domain
+            "clusterType": "string"// 环境集群类型，取值：MRS|CDH|FusionInsight
+          }
+        }
+      x-request-examples-1: |-
+        {
+          "name": "HDFS_Cluster",
+          "type": "BigData",
+          "endpoint": "192.168.0.1",
+          "subType": "HDFS",
+          "port": 8888,
+          "extendInfo": {
+            "loginMode": "string",//环境的鉴权方式，取值：loginWithPassword|loginWithNoAuth|loginWithKerberos
+            "kerberosId": "string",//环境鉴权使用的kerberosid
+            "accessType": "string",//环境访问方式（ip或域名），取值：ip|domain
+            "clusterType": "string"// 环境集群类型，取值：MRS|CDH|FusionInsight
+          }
+        }
+      x-request-examples-url-1: 'POST https://host:25801/v2/environments'
+      x-request-examples-description-1: 注册HDFS集群
       x-dp-admin-role: 'Y'
       x-sysadmin-role: 'Y'
       tags:
@@ -304,6 +316,11 @@ paths:
             application/json: ''
   '/v2/resources/{resourceId}':
     get:
+      x-impact-subsystem: 不影响
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-sysadmin-role: 'Y'
       x-access-port: 25081
       x-auth-required: 'Y'
       x-public-api: 'Y'
@@ -324,6 +341,11 @@ paths:
           schema:
             $ref: '#/definitions/ProtectedResourceResponse'
     delete:
+      x-impact-subsystem: 不影响
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-sysadmin-role: 'Y'
       x-access-port: 25081
       x-auth-required: 'Y'
       x-public-api: 'Y'
@@ -342,6 +364,11 @@ paths:
         '200':
           description: 操作成功无返回结果，操作失败异常报错。
     put:
+      x-impact-subsystem: 不影响
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-sysadmin-role: 'Y'
       x-access-port: 25081
       x-auth-required: 'Y'
       x-public-api: 'Y'
@@ -367,6 +394,9 @@ paths:
           description: 操作成功无返回结果，操作失败异常报错。
   '/v2/environments/{envId}':
     put:
+      x-impact-subsystem: 不影响
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
       x-dp-admin-role: 'Y'
       x-sysadmin-role: 'Y'
       x-access-port: 25081
@@ -400,6 +430,9 @@ paths:
           schema:
             type: string
     delete:
+      x-impact-subsystem: 不影响
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
       x-access-port: 25081
       x-auth-required: 'Y'
       x-public-api: 'Y'
@@ -428,6 +461,11 @@ paths:
             type: string
   '/v2/{resourceId}/authentication':
     put:
+      x-impact-subsystem: 不影响
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-sysadmin-role: 'Y'
       x-access-port: 25082
       x-auth-required: 'Y'
       x-public-api: 'Y'
@@ -453,6 +491,9 @@ paths:
           description: '--'
   '/v2/environments/{envId}/authentication':
     put:
+      x-impact-subsystem: 不影响
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
       x-access-port: 25081
       x-auth-required: 'Y'
       x-public-api: 'Y'
@@ -487,6 +528,9 @@ paths:
             type: string
   '/v2/environments/{envId}/action/scan':
     put:
+      x-impact-subsystem: 不影响
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
       x-dp-admin-role: 'Y'
       x-sysadmin-role: 'Y'
       x-access-port: 25081
