Match-id-e5a3222bcc7bed4581b95c340898fbd0903a18c1

--- a/api/internal/export-files-internal.yaml
+++ b/api/internal/export-files-internal.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   version: v1
-  title: ApplicationTitle
+  title: 导出/下载文件管理内部接口
   description: GroupDesc
 schemes:
   - https
