Match-id-b01b4d8ab55280e9857b89d56b291022a1c4c32e

--- a/api/external/api-resource-access.yaml
+++ b/api/external/api-resource-access.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   version: v1
-  title: ResourceAccessFramework
+  title: 资源接入接口
 basePath: /
 tags:
   - name: protected-environment-api
