--- a/api/external/api-cluster.yaml
+++ b/api/external/api-cluster.yaml
@@ -154,6 +154,7 @@ paths:
       deprecated: false
   /v1/clusters:
     get:
+      x-rd-admin-role: 'N'
       x-dp-admin-role: 'Y'
       x-auditor-role: 'Y'
       x-sysadmin-role: 'Y'
@@ -221,7 +222,7 @@ paths:
         - name: roleList
           in: query
           required: false
-          description: 集群角色：【0：复制目标集群；2：管理目标集群；不选，所有集群类型】
+          description: 集群角色：【0：复制目标集群；2：被管理目标集群；4：管理目标集群；不选，所有集群类型】
           type: array
           items:
             type: integer
@@ -242,6 +243,14 @@ paths:
         - Authorization:
             - global
     post:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - '${clusters-api}'
       summary: 创建目标集群
@@ -277,72 +286,16 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
-  /v1/clusters/anti-ransomware/resource:
-    get:
-      tags:
-        - '${clusters-api}'
-      summary: 查询防勒索资源列表
-      operationId: queryAntiRansomwareResourceUsingGET
-      produces:
-        - '*/*'
-      parameters:
-        - name: X-Auth-Token
-          in: header
-          description: Access token
-          required: true
-          type: string
-        - name: otherResIds
-          in: query
-          description: 性能指标类型，1：iops， 2：平均io响应 3：带宽
-          required: true
-          type: array
-          items:
-            type: string
-          collectionFormat: multi
-        - name: pageNo
-          in: query
-          description: 性能指标类型，1：iops， 2：平均io响应 3：带宽
-          required: true
-          type: integer
-          format: int32
-        - name: pageSize
-          in: query
-          description: 性能指标类型，1：iops， 2：平均io响应 3：带宽
-          required: true
-          type: integer
-          format: int32
-        - name: policyResIds
-          in: query
-          description: 性能指标类型，1：iops， 2：平均io响应 3：带宽
-          required: true
-          type: array
-          items:
-            type: string
-          collectionFormat: multi
-        - name: resourceSubType
-          in: query
-          description: 性能指标类型，1：iops， 2：平均io响应 3：带宽
-          required: true
-          type: string
-      responses:
-        '200':
-          description: OK
-          schema:
-            originalRef: AntiRansomwareResourcePage«AntiRansomwareResource»
-            $ref: '#/definitions/AntiRansomwareResourcePage«AntiRansomwareResource»'
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-      security:
-        - Authorization:
-            - global
-      deprecated: false
   /v1/clusters/capacity:
     get:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - '${capacity-api}'
       summary: 查询整系统容量及数据压缩
@@ -370,9 +323,16 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
   /v1/clusters/capacity/tendency:
     get:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - '${capacity-api}'
       summary: 查询整系统容量使用趋势
@@ -400,7 +360,6 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
   /v1/clusters/copies/import:
     post:
       tags:
@@ -443,6 +402,14 @@ paths:
       deprecated: false
   /v1/clusters/details:
     get:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'Y'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - '${clusters-api}'
       summary: 获取集群详情
@@ -470,7 +437,6 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
   /v1/clusters/link/certify:
     put:
       tags:
@@ -549,6 +515,14 @@ paths:
       deprecated: false
   /v1/clusters/status:
     get:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'Y'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - '${clusters-api}'
       summary: 获取集群状态信息
@@ -568,19 +542,9 @@ paths:
           type: string
           maxLength: 256
           minLength: 1
-          allowEmptyValue: false
       responses:
         '200':
-          description: OK
-          schema:
-            type: string
-            enum:
-              - UNKNOWN
-              - NORMAL
-              - RUNNING
-              - ONLINE
-              - OFFLINE
-              - PARTIALLY_ABNORMAL
+          description: ''
         '401':
           description: Unauthorized
         '403':
@@ -590,9 +554,16 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
   /v1/clusters/target/relation:
     post:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'Y'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - '${clusters-api}'
       summary: 添加源端与目标集群之间的关系
@@ -628,9 +599,16 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
   '/v1/clusters/{clusterId}':
     put:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - '${clusters-api}'
       summary: 修改目标集群
@@ -651,9 +629,7 @@ paths:
           required: true
           type: integer
           maximum: 2147483647
-          exclusiveMaximum: false
           minimum: 1.0
-          exclusiveMinimum: false
           format: int32
         - in: body
           name: request
@@ -676,8 +652,11 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
     delete:
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-sysadmin-role: 'Y'
       x-impact-subsystem: 不影响
       x-access-port: 25081
       x-auth-required: 'Y'
@@ -734,6 +713,14 @@ paths:
             - global
   '/v1/clusters/{clusterId}/nodes':
     get:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - '${clusters-api}'
       summary: 查询集群节点信息
@@ -752,9 +739,7 @@ paths:
           required: true
           type: integer
           maximum: 10.0
-          exclusiveMaximum: false
           minimum: 1.0
-          exclusiveMinimum: false
           format: int32
         - name: nodeName
           in: query
@@ -767,9 +752,7 @@ paths:
           required: false
           type: integer
           maximum: 200.0
-          exclusiveMaximum: false
           minimum: 0.0
-          exclusiveMinimum: false
           format: int32
           x-example: 10
         - name: startPage
@@ -778,7 +761,6 @@ paths:
           required: false
           type: integer
           minimum: 0.0
-          exclusiveMinimum: false
           format: int32
           x-example: 0
         - name: statusList
@@ -805,7 +787,6 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
   /v1/internal/clusters/details:
     get:
       tags:
